testsuite/tests/indexed-types/should_compile/ClosedFam2.hs
{-# LANGUAGE TypeFamilies #-}

module ClosedFam2 where

import {-# SOURCE #-} ClosedFam2

type family Foo a where
  Foo Int = Bool
  Foo [a] = Maybe a